[gd_scene load_steps=13 format=3 uid="uid://beers4vlbj5co"]

[ext_resource type="FontFile" uid="uid://dj4fd46cimv4c" path="res://assets/fonts/News_Gothic/NewsGothicStd-Bold.otf" id="1_37p78"]
[ext_resource type="Script" uid="uid://0lm8gu08768v" path="res://scripts/hud.gd" id="1_64ctp"]
[ext_resource type="Texture2D" uid="uid://nu1jvcc7yayq" path="res://assets/sprites/hud/ammo.png" id="3_8sq4i"]
[ext_resource type="Texture2D" uid="uid://58505lerbc6y" path="res://assets/sprites/hud/heart.png" id="4_640wx"]
[ext_resource type="Texture2D" uid="uid://df85cjlisl6xi" path="res://assets/feup-o-regresso-dos-mitras-20-03-2025.png" id="5_047uy"]
[ext_resource type="FontFile" uid="uid://chavs2a2y8smw" path="res://assets/fonts/News_Gothic/NewsGothicStd.otf" id="6_5pdws"]

[sub_resource type="Animation" id="Animation_5pdws"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Title:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.0239131, 0.0239131)]
}

[sub_resource type="Animation" id="Animation_047uy"]
resource_name = "expand"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Title:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.46667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.0239131, 0.0239131), Vector2(0.223912, 0.223912)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hd3ao"]
_data = {
&"RESET": SubResource("Animation_5pdws"),
&"expand": SubResource("Animation_047uy")
}

[sub_resource type="Animation" id="Animation_0i1j5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Crawler:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(40, 160)]
}

[sub_resource type="Animation" id="Animation_hd3ao"]
resource_name = "crawl"
length = 30.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Crawler:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 30),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(40, 160), Vector2(40, -352)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mphia"]
_data = {
&"RESET": SubResource("Animation_0i1j5"),
&"crawl": SubResource("Animation_hd3ao")
}

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_64ctp")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_left = -1.0
offset_top = -1.0
offset_right = -118.0
offset_bottom = 31.0
grow_horizontal = 2
scale = Vector2(1.76, 1)
theme_override_fonts/font = ExtResource("1_37p78")
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="ExtraAmmoLabel" type="Label" parent="."]
offset_left = 200.0
offset_top = 128.0
offset_right = 240.0
offset_bottom = 151.0
horizontal_alignment = 2

[node name="Ammo" type="Sprite2D" parent="."]
position = Vector2(245, 140)
texture = ExtResource("3_8sq4i")
hframes = 5

[node name="ExtraHPLabel" type="Label" parent="."]
offset_left = 8.0
offset_top = 133.0
offset_right = 48.0
offset_bottom = 156.0
horizontal_alignment = 2

[node name="HP" type="Sprite2D" parent="."]
position = Vector2(47, 144)
scale = Vector2(0.82, 0.82)
texture = ExtResource("4_640wx")
hframes = 4

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -44.0
offset_top = -58.0
offset_right = 44.0
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_37p78")
text = "Start"

[node name="GameOverLabel" type="Label" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_top = 16.0
offset_bottom = 53.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_37p78")
text = "Game Over
Your final score is:"
horizontal_alignment = 1

[node name="FinalScoreLabel" type="Label" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_top = 61.0
offset_bottom = 100.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_37p78")
theme_override_font_sizes/font_size = 38
text = "0"
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="ALongTimeAgo" type="Label" parent="."]
offset_left = 48.0
offset_top = 64.0
offset_right = 248.0
offset_bottom = 91.0
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.0313726, 0.854902, 1, 1)
theme_override_fonts/font = ExtResource("1_37p78")
theme_override_font_sizes/font_size = 11
text = "Há muito tempo numa galáxia muito, muito distante..."
horizontal_alignment = 3
autowrap_mode = 2

[node name="Title" type="Sprite2D" parent="."]
position = Vector2(136, 80)
scale = Vector2(0.0239131, 0.0239131)
texture = ExtResource("5_047uy")

[node name="SkipButton" type="Button" parent="."]
offset_left = 232.0
offset_top = 128.0
offset_right = 262.0
offset_bottom = 149.0
theme_override_fonts/font = ExtResource("6_5pdws")
theme_override_font_sizes/font_size = 12
text = "Skip"

[node name="Crawler" type="Label" parent="."]
offset_left = 40.0
offset_top = 160.0
offset_right = 224.0
offset_bottom = 535.0
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 0.909804, 0.121569, 1)
theme_override_fonts/font = ExtResource("1_37p78")
theme_override_font_sizes/font_size = 10
text = "Há cerca de 200 anos que estamos em guerra. Após as primeiras invasões à FEUP por parte dos dos mitras dos bairros da Areosa e da Pasteleira à FEUP, todo o desenvovlimento tecnológico de ambas as frentes se deu em prol de intensificar esta guerra na busca de uma vitória.

No desenrolar desta batalha que se propagou à escala mundial, os conceituados engenheiros da Faculdade de Engenharia da Universidade Porto foram os primeiros a chegar ao espaço. O seu ego foi quase instantaneamente ferido quando descobriram que os mitras das periferias da sua faculdade não tardaram nada a alcançar semlhante conquista.

Quando será que esta guerra vai acabar? Será que tens o que é preciso para defender a honra do nome da engenharia e pôr um fim a esta carnificina, pequeno engenheiro?"
horizontal_alignment = 3
autowrap_mode = 2

[node name="ExpandTitle" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_hd3ao")
}
movie_quit_on_finish = true

[node name="Crawl" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_mphia")
}
movie_quit_on_finish = true

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="button_down" from="SkipButton" to="." method="_on_skip_button_button_down"]
